--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,16 +2,17 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ide.rider": "1.1.4",
+    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.8",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.test-framework": "1.1.22",
-    "com.unity.textmeshpro": "2.1.1",
+    "com.unity.test-framework": "1.1.24",
+    "com.unity.textmeshpro": "2.1.4",
     "com.unity.timeline": "1.2.18",
     "com.unity.toolchain.macos-x86_64-linux-x86_64": "0.1.20-preview",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arcore": "2.1.16",
-    "com.unity.xr.arfoundation": "2.1.16",
-    "com.unity.xr.arkit": "2.1.16",
+    "com.unity.xr.arcore": "2.1.18",
+    "com.unity.xr.arfoundation": "2.1.18",
+    "com.unity.xr.arkit": "2.1.18",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
